# s3rename

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.rpm/: s3rename.spec
src/: args.rs  errors.rs  main.rs  wrapped_copy.rs
