[package]
name = "s3rename"
description = "Tool to mass-rename S3 keys"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sedregex = "0.2"
tokio = {version = "0.2", features = ["full"]}
rusoto_core = "0.43"
rusoto_s3 = "0.43"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.3"
lazy_static = "1.4"
futures = "0.3"
