[package]
name = "s3rename"
description = "Tool to mass-rename S3 keys"
version = "0.1.1"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesmcm/s3rename"
homepage = "https://github.com/jamesmcm/s3rename"

[dependencies]
sedregex = "0.2"
tokio = {version = "0.2", features = ["full"]}
rusoto_core = "0.43"
rusoto_s3 = "0.43"
structopt = "0.3"
anyhow = "1"
thiserror = "1"
regex = "1"
lazy_static = "1"
futures = "0.3"
clap = "2"
num-derive = "0.3"
num-traits = "0.2"
log = "0.4"
